# polkavm-move

./: .gitignore  0xa000__morebasic.ll  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: aptos-build.yml  coverage.yml  move-to-polka.yml
crates/build-tools/: Cargo.toml
crates/build-tools/src/: lib.rs
crates/move-to-polka/: Cargo.toml  build.rs
crates/move-to-polka/src/: hash.rs  lib.rs  linker.rs  main.rs  native.rs
crates/move-to-polka/src/stackless/: dwarf.rs  extensions.rs  llvm.rs  mod.rs  module_context.rs  rttydesc.rs  translate.rs
crates/move-to-polka/tests/: aptos_hash.rs  coin-swap.rs  entry.rs  examples_basic_coin_test.rs  examples_basic_test.rs  hash.rs  multi_module.rs  multiple_functions.rs  project.rs  returns.rs  run.rs  serialize.rs  storage.rs  string.rs  taohe.rs  vector.rs  void.rs
crates/polkavm-move-native/: Cargo.toml  README.md  build.sh
crates/polkavm-move-native/src/: allocator.rs  host.rs  lib.rs  serialization.rs  storage.rs  types.rs  vector.rs
crates/polkavm-move-native/src/guest/: allocator.rs  imports.rs  mod.rs  panic.rs  polkavm_imports.rs
crates/polkavm-wrapper/: Cargo.toml
crates/polkavm-wrapper/src/: main.rs
crates/testing-infra/test-generation/src/: bytecode_generator.rs
crates/testing-infra/transactional-test-runner/src/: framework.rs  vm_test_harness.rs
examples/aptos_hash/: Move.toml
examples/aptos_hash/sources/: test.move
examples/basic/: Move.toml
examples/basic-coin/: Move.toml
examples/basic/sources/: arith.move  basic.move  error.move  morebasic.move  multiple_functions.move  returns.move  serialize.move  string.move  struct.move  tuple.move  vector.move  void.move
examples/basic_coin/: Move.toml
examples/basic_coin/sources/: basic_coin.move
examples/coin-swap/: Move.toml
examples/coin-swap/sources/: GoldCoin.move
examples/entry/: Move.toml
examples/entry/sources/: entry.move
examples/hash_tests/: Move.toml
examples/hash_tests/sources/: hash_tests.move
examples/multi_module/: Move.toml
examples/multi_module/sources/: modules.move  modules2.move
examples/objects/: Move.toml
examples/objects/sources/: lib.move
examples/project/: Move.toml
examples/project/sources/: moduleA.move  moduleB.move
examples/run/: Move.toml
examples/run/sources/: run.move
examples/serialize/: Move.toml
examples/serialize/sources/: serialize.move
examples/storage/: Move.toml
examples/storage/sources/: storage.move
examples/string/: Move.toml
examples/string/sources/: string.move
examples/taohe/: Move.toml
examples/taohe/sources/: entry.move
examples/unit_test/: Move.toml
examples/unit_test/sources/: UnitTest.move
examples/vector/: Move.toml
examples/vector/sources/: vector.move
examples/void/: Move.toml
examples/void/sources/: void.move
language/move-native/: Cargo.toml
language/move-native/src/: allocator.rs  conv.rs  lib.rs  panic.rs  rt.rs  rt_types.rs  serialization.rs  std.rs  target_defs.rs  tests.rs  vector.rs
language/polkavm/: README.md
language/polkavm-move-native/: Cargo.toml  README.md  build.sh  riscv32emac-unknown-none-polkavm.json
language/polkavm-move-native/src/: allocator.rs  conv.rs  host.rs  lib.rs  panic.rs  structs.rs  types.rs  vector.rs
language/polkavm-move-native/src/guest/: allocator.rs  imports.rs  mod.rs
language/polkavm/examples/basic/sources/: abort.move  basic.move  error.move  morebasic.move  native.move  returns.move  serialize.move  string.move  tuple.move  vector.move  void.move
language/polkavm/examples/hash_tests/sources/: hash_tests.move
language/polkavm/examples/multi_module/sources/: modules.move  modules2.move
language/polkavm/move-to-polka/: Cargo.toml  build.rs
language/polkavm/move-to-polka/src/: lib.rs  linker.rs  main.rs  options.rs  tools.rs
language/polkavm/move-to-polka/src/stackless/: dwarf.rs  entrypoint.rs  extensions.rs  llvm.rs  module_context.rs  rttydesc.rs  translate.rs
language/polkavm/move-to-polka/tests/: examples_basic_morebasic_move_test.rs  examples_basic_test.rs  multiple_functions.rs
language/polkavm/move-to-polka/tests/common/: mod.rs
language/polkavm/platform-tools/: Cargo.toml
language/polkavm/platform-tools/src/: lib.rs
language/testing-infra/transactional-test-runner/src/: framework.rs  vm_test_harness.rs
language/tools/build-tools/: Cargo.toml
language/tools/build-tools/src/: lib.rs
language/tools/move-mv-llvm-compiler/: Cargo.toml  README.md
language/tools/move-mv-llvm-compiler/docs/: Development.md  MoveToLLVM.md
language/tools/move-mv-llvm-compiler/src/: main.rs  package.rs
language/tools/move-mv-llvm-compiler/tests/: rbpf-tests.rs  test_common.rs
language/tools/move-mv-llvm-compiler/tests/rbpf-tests/: struct-fxpt32.move
language/tools/polkavm-wrapper/: Cargo.toml
language/tools/polkavm-wrapper/src/: main.rs
