[workspace]
resolver = "2"

members = [
    "language/polkavm-move-native",
    "language/polkavm/move-to-polka",
    "language/tools/move-mv-llvm-compiler",
    "language/tools/polkavm-wrapper",
    "language/tools/build-tools",
]

# NOTE: default-members is the complete list of binaries that form the "production Move codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    # "language/move-native",
    "language/polkavm/move-to-polka",
    "language/tools/polkavm-wrapper",
    "language/tools/build-tools",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
bcs = "0.1.4"


[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
debug = 0           # for saving disk space during linking
incremental = false
codegen-units = 16
