[workspace]
resolver = "2"

members = [
    "crates/polkavm-move-native",
    "crates/move-to-polka",
    "crates/polkavm-wrapper",
    "crates/build-tools",
]

# NOTE: default-members is the complete list of binaries that form the "production Move codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "crates/polkavm-move-native",
    "crates/move-to-polka",
    "crates/polkavm-wrapper",
    "crates/build-tools",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
bcs = "0.1"
polkavm = "0.30"
polkavm-linker = "0.30"


[profile.bench]
debug = true

[profile.dev]
debug = true
