[package]
name = "move-to-polka"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate An Instruction Set code from Move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
polkavm = { workspace = true }
polkavm-linker = { workspace = true }
polkavm-move-native = { path = "../polkavm-move-native", features = ["host"] }
build-tools = { path = "../build-tools" }

anyhow = "1.0.52"
atty = "0.2.14"
blake3 = "1.5"
bs58 = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
# we can not upgrade the next 2 until aptos-move updates
codespan = "0.11.1"
codespan-reporting = "0.11.1"
anstyle = "1.0"
env_logger = { version = "0.11", features = ["color"] }
extension-trait = "1.0.1"
itertools = "0.14"
libc = "0.2"
# we can not upgrade llvm as ubuntu does not have a newer version
llvm-sys = "191.0"
log = "0.4.14"
move-binary-format = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-binary-format" }
move-bytecode-source-map = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-bytecode-source-map" }
move-command-line-common = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-compiler" }
move-compiler-v2 = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-compiler-v2" }
move-core-types = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-core-types" }
move-ir-types = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-ir-types" }
move-model = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-model" }
move-stackless-bytecode = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-stackless-bytecode" }
move-package = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-package" }
num = "0.4.0"
num-traits = "0.2"
once_cell = "1.21"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
hex-literal = "1.0"
gix = { version = "0.73", features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls",
] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
serial_test = "3.2.0"


[build-dependencies]
move-stdlib = { git = "https://github.com/eigerco/move-on-aptos.git", package = "move-stdlib" }
cargo_metadata = "0.21"
thiserror = "2.0"
build-tools = { path = "../build-tools" }
anyhow = "1.0.98"
