[package]
name = "polkavm-move-native"
version = "0.1.0"
edition = "2021"
authors = ["Diem Association <opensource@diem.com>"]
description = "Runtime calls for LLVM-compiled Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.14", optional = true }
polkavm-derive = { optional = true, version = "0.24.0" }
polkavm = { optional = true, version = "0.24.0" }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
ethnum = { version = "1.5", default-features = false }
heapless = { version = "0.8", default-features = false }

[features]
polkavm = ["dep:polkavm-derive"]
host = ["dep:polkavm", "dep:log"]
