[package]
name = "polkavm-move-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.14", optional = true }
polkavm-derive = { optional = true, version = "0.23.0" }
polkavm = { optional = true, version = "0.23.0" }

[features]
polkavm = ["dep:polkavm-derive"]
host = ["dep:polkavm", "dep:log"]
