[package]
name = "move-to-polka"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate An Instruction Set code from Move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
blake3 = "1.5"
bs58 = "0.5.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "3.0.0"
anstyle = "1.0"
env_logger = {version="0.11", features=["color"]}
extension-trait = "1.0.1"
itertools = "0.14"
libc = "0.2"
llvm-sys = "191.0"
log = "0.4.14"
move-binary-format = { path = "../../move-binary-format" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-command-line-common = { path = "../../move-command-line-common" }
move-compiler = { path = "../../move-compiler" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-model = { path = "../../move-model" }
move-native = { path = "../../move-native" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }
move-symbol-pool = { path = "../../move-symbol-pool" }
num = "0.4.0"
num-traits = "0.2"
once_cell = "1.10"
parking_lot = "0.12"
regex = "1.1.9"
semver = "1.0.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2"
hex = "0.4"
