[package]
name = "move-to-polka"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate An Instruction Set code from Move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
blake3 = "1.5"
bs58 = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
anstyle = "1.0"
env_logger = { version = "0.11", features = ["color"] }
extension-trait = "1.0.1"
itertools = "0.14"
libc = "0.2"
llvm-sys = "191.0"
log = "0.4.14"
move-binary-format = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-binary-format" }
move-bytecode-source-map = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-bytecode-source-map" }
move-command-line-common = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-compiler" }
move-core-types = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-core-types" }
move-ir-types = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-ir-types" }
move-model = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-model" }
move-native = { path = "../../move-native" }
move-stackless-bytecode = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-stackless-bytecode" }
move-symbol-pool = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-symbol-pool" }
num = "0.4.0"
num-traits = "0.2"
once_cell = "1.21"
parking_lot = "0.12"
polkavm-linker = "0.23.0"
regex = "1.1.9"
semver = "1.0.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2"
hex = "0.4"
which = "7.0.3"
build-tools = { path = "../../tools/build-tools" }

[dev-dependencies]
polkavm = "0.23.0"
serial_test = "3.2.0"
polkavm-move-native = { path = "../../polkavm-move-native", features = [
    "host",
] }


[build-dependencies]
move-stdlib = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-stdlib" }
cargo_metadata = "0.19"
thiserror = "2.0"
build-tools = { path = "../../tools/build-tools" }
anyhow = "1.0.98"
