[package]
name = "move-mv-llvm-compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate LLVM IR from Move bytecode (.mv files)"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
colored = "3.0.0"
env_logger = {version="0.11", features=["color"]}
libc = "0.2"
log = "0.4.14"
chrono = "0.4"
once_cell = "1.10"
parking_lot = "0.12"
toml = "0.7" # this must remain on 0.7 until aptos-move updates
regex = "1.1.9"
rand = "0.9"
move-coverage = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-coverage" }
move-cli = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-cli" }
move-package = { git = "https://github.com/move-language/move-on-aptos.git",package = "move-package" }
move-native = { path = "../../move-native" }
move-binary-format = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-binary-format" }
move-bytecode-verifier = { git = "https://github.com/move-language/move-on-aptos.git",package = "move-bytecode-verifier" }
move-bytecode-source-map = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-bytecode-source-map" }
move-command-line-common = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-compiler" }
move-core-types = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-core-types" }
move-ir-types = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-ir-types" }
move-model = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-model" }
move-stackless-bytecode = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-stackless-bytecode" }
move-stdlib = { git = "https://github.com/move-language/move-on-aptos.git",package = "move-stdlib" }
move-symbol-pool = { git = "https://github.com/move-language/move-on-aptos.git", package = "move-symbol-pool" }
move-to-polka = { path = "../../polkavm/move-to-polka" }
clap = { version = "4.5", features = ["derive"] }
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
semver = "1.0.13"
llvm-sys = "191.0.0"
extension-trait = "1.0.1"
num = "0.4.0"
num-traits = "0.2"
codespan = "0.11.1"
codespan-reporting = "0.11.1"

[dev-dependencies]
datatest-stable = "0.1.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
similar = "2.1.0"
# solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
# solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
# solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "5d1538013206c1afe6f9d3c8a1a870cb0bfa9dcd" }
# solana_rbpf = "=0.7.1"
thiserror = "1.0.69"

[features]
# solana = []
# default = ["solana"]

[[test]]
name = "ir-tests"
harness = false

[[test]]
name = "move-ir-tests"
harness = false

[[test]]
name = "rbpf-tests"
harness = false

[[test]]
name = "move-to-llvm-tests"
harness = false

[[test]]
name = "stdlib-tests"
harness = false

[[test]]
name = "stdlib-with-p-option-tests"
harness = false

[[test]]
name = "cli-tests"
harness = false

[[test]]
name = "dwarf-tests"
harness = false
